# MSStoreHelper

./: CHANGELOG.md  CLAUDE.md  LOGO_PROMPTS.md  MSStoreHelper.py  README.md  RESEARCH.md  ROADMAP.md  msstore_package_resolution.py  pyproject.toml  requirements.txt  store_sources.py
tests/: test_accessibility.py  test_appinstaller_export.py  test_cli.py  test_dependency_bootstrap.py  test_diagnostics_bundle.py  test_dism_export.py  test_integration_harness.py  test_intune_export.py  test_keep_updated.py  test_ltsc_workflow.py  test_offline_cache.py  test_package_diff.py  test_package_resolution.py  test_release_notes.py  test_store_repair.py  test_store_sources.py  test_theme.py  test_user_profile.py  test_winget_export.py
